--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "http://Agustinlupa.github.io/portfolio",
-  "name": "portfolio",
+  "homepage": "",
+  "name": "FinalPrFront",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
