--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,7 +5,7 @@ http {
         listen 80;
         
         location / {
-            root /usr/share/nginx/html;
+            root /usr/public/nginx/html;
             index index.html;
             try_files $uri $uri/ /index.html;
         }
