--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^5.2.3",
+    "dotenv": "^16.4.5",
     "eslint-config-react-app": "^7.0.1",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
